# advent-of-code-python

./: .gitignore  .pre-commit-config.yaml  init.py  pyproject.toml
2023/1/: advent_code.py  day01.py  statement.html  test_advent_code.py  test_day01.py
2023/10/: advent_code.py  day10.py
2023/11/: advent_code.py  day11.py
2023/12/: advent_code.py  test_advent_code.py  test_day12.py
2023/13/: advent_code.py  day13.py
2023/14/: advent_code.py
2023/15/: advent_code.py
2023/16/: advent_code.py
2023/17/: advent_code.py
2023/18/: advent_code.py
2023/19/: advent_code.py
2023/2/: advent_code.py  test_advent_code.py  test_day02.py
2023/20/: advent_code.py
2023/21/: advent_code.py
2023/22/: advent_code.py
2023/23/: advent_code.py
2023/24/: advent_code.py
2023/25/: advent_code.py
2023/3/: advent_code.py  code.py  day03.py  test_advent_code.py  test_day03.py
2023/4/: advent_code.py  code.py  test_advent_code.py  test_day04.py
2023/5/: advent_code.py  code.py  day05.py  test_advent_code.py  test_day05.py
2023/6/: advent_code.py  code.py
2023/7/: advent_code.py  code.py
2023/8/: advent_code.py  code.py  day08.py
2023/9/: advent_code.py
2025/1/: day01.py  test_day01.py
2025/10/: day10.py
2025/11/: day11.py
2025/12/: day12.py
2025/2/: day02.py
2025/3/: day03.py
2025/4/: day04.py
2025/5/: day05.py
2025/6/: day06.py
2025/7/: day07.py
2025/8/: day08.py  test_day08.py
2025/9/: day09.py
