[project]
name = "advent-of-code"
version = "0.1.0"
description = "Advent of Code solutions in Python"
authors = [{ name = "Mouly Taha" }]
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "debugpy>=1.8.18",
    "pre-commit>=4.5.0",
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]

[tool.ruff]
line-length = 80
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["E501"]  # Allow long lines in test files
"**/__init__.py" = ["N999"]  # Allow numeric module names for AoC

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["2023", "2024", "2025"]
pythonVersion = "3.14"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["2023", "2024", "2025"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short --import-mode=importlib"

